# beer-app-repo

./: .gitignore  Modification.md  README.md  entrypoint.sh
.github/workflows/: build-and-push.yaml  pr_checks.yaml
app/: README.md  pyproject.toml  seed.py
app/beer_catalog/: app.py  beer.py  db.py
docker/: Dockerfile  Dockerfile2
terraform/: README.md  versions.tf
terraform/dev/: .terraform.lock.hcl  ecr.tf  main.tf  output.tf  tfplan  variables.tf
terraform/dev/ecs/: iam.tf  security.tf  service.tf  task.tf  variables.tf
terraform/modules/ecr/: main.tf  variables.tf
terraform/modules/ecs/: autoscaling.tf  cluster.tf  iam.tf  service.tf  task.tf  variables.tf
terraform/modules/rds/: main.tf  network.tf  output.tf  secrets.tf  user.tf  variables.tf
terraform/modules/security/: main.tf  outputs.tf  variables.tf
terraform/prod/: main.tf  variables.tf
terraform/shared/: main.tf  variables.tf
